--- a/extra_pages/programing.html
+++ b/extra_pages/programing.html
@@ -5,18 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background: url('https://previews.123rf.com/images/thanawong/thanawong1602/thanawong160200009/53371490-vector-flat-design-web-banner-template-for-website-under-construction-or-work-in-progress-.jpg');
-          
-            background-size: cover;
-        }
-    </style>
+    <title>Amodh>> Programing</title>
+    <link rel="stylesheet" href="../css/programing.css">
+
 </head>
 
 <body>
-
+    <h1>Programing <br> Data</h1>
+    <div class="github">
+        <a href="https://github.com/cc1-a">
+            <img class="img_git" src="https://avatars.githubusercontent.com/u/67567634?v=4" alt="">
+            <span>cc1-a@github.com</span></a>
+    </div>
+    <div class="container">
+        <div class="website">
+            <img src="../Image 3@1x.png" alt="">
+        </div>
+        <div class="app">
+            <img src="../Image 4@1x.png" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
