--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amodh Profilio</title>
-    <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="./fav.jpg" />
     <link rel="stylesheet" href="./css/home.css">
 
 </head>
