after adding the gallery

--- a/extra_pages/programing.html
+++ b/extra_pages/programing.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-    <h1>Programing <br> Data</h1>
+    <div class="upper_header">
+        <h1>Programing <br> Data</h1>
+        <img src="../assets/Line Copy@1x.png" alt="" class="design_2">
+        <img src="../assets/Line Copy 3@1x.png" alt="" class="design_1">
+        <img src="../assets/Line@1x.png" alt="" class="design_3">
+    </div>
     <div class="github">
         <a href="https://github.com/cc1-a">
             <img class="img_git" src="https://avatars.githubusercontent.com/u/67567634?v=4" alt="">
@@ -19,10 +24,10 @@
     </div>
     <div class="container">
         <div class="website">
-            <img src="../Image 3@1x.png" alt="">
+            <img src="../assets/Image 3@1x.png" alt="">
         </div>
         <div class="app">
-            <img src="../Image 4@1x.png" alt="">
+            <img src="../assets/Image 4@1x.png" alt="">
         </div>
     </div>
 </body>
