--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amodh Profilio</title>
-    <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="./assets/fav.jpg" />
     <link rel="stylesheet" href="./css/home.css">
 
 </head>
 
 <body>
     <div class="container">
-        <img src="./my_pic.jpg" alt="">
+        <img src="./assets//my_pic.jpg" alt="">
         <a href="./extra_pages/signging_page.html">
             <div class="sectionSignging">
                 <h1>Singing</h1>
