--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
         <img src="./assets//my_pic.jpg" alt="">
+        <label for="">Gallery Visit </label>
         <a href="./extra_pages/signging_page.html">
             <div class="sectionSignging">
                 <h1>Singing</h1>
