--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <body>
     <div class="container">
         <img src="./my_pic.jpg" alt="">
+        
+        <br/>
+
+I am Amodh Gunawardana.A 15 year old kid who has intrest in music and programing.
+School: D.S Senanayake College
+
+        
         <a href="./extra_pages/signging_page.html">
             <div class="sectionSignging">
                 <h1>Singing</h1>
