--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         
         <br/>
 
-I am Amodh Gunawardana.A 15 year old kid who has intrest in music and programing.
-School: D.S Senanayake College
+        <p>I am Amodh Gunawardana.A 15 year old kid who has intrest in music and programing.
+        School: D.S Senanayake College</p>
 
         
         <a href="./extra_pages/signging_page.html">
