--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="cfJnK7NYCIv2IjfPHdfRoBsheyWaF84PJshAdrgJJxs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amodh Profilio</title>
     <link rel="shortcut icon" type="image/jpg" href="./fav.jpg" />
