--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
     <div class="container">
         <img src="./assets//my_pic.jpg" alt="">
+          <p>I am Amodh Gunawardana.A 15 year old kid who has intrest in music and programing.
+        School: D.S Senanayake College</p>
         <label for="">Gallery Visit </label>
         <a href="./extra_pages/signging_page.html">
             <div class="sectionSignging">
